src/assets/css/style.css
/* ... */
body.subpage main ul {
  max-width: 40em;
  margin: auto;
  text-align: left;
  font-size: clamp(1em, 2vw, 1.25em);
  padding-left: 1em; 
}

body.subpage main li {
  line-height: 1.5;
  margin-bottom: 1em;
}

body.subpage h2 {
  font-size: clamp(1.75em, 4vw, 2.85em);
  margin: 2em 0 1.5em 0;
  letter-spacing: var(--spacing-largest);
  text-shadow: var(--shadow-medium);
}

body.subpage a {
  color: var(--white);
}

.breadcrumbs {
  max-width: none !important;
  list-style-type: none;
  text-transform: capitalize;
}

.breadcrumbs li {
  display: inline;
  font-size: 1rem;
  margin-bottom: 0 !important;
}

.breadcrumbs li:not(:first-child)::before {
  content: '> ';
  font-size: 0.9rem;
} 

.breadcrumbs a {
  text-decoration: underline;
}

@media screen and (min-width: 900px) {
  .hamburger {
    display: none;
  }
  .michelin {
    display: block;
  }
  nav {
    display: flex;
    position: relative;
    flex-direction: row;
    width: auto;
  }
  nav ul {
    flex-direction: row;
    padding-top: 0;
  }
  nav ul .home {
    display: none;
  }

  nav ul li a {
    display: inline-block;
    width: auto;
    padding: 0.375rem 0.75rem;
  }
    .close-btn {
    display: none;
  }  
}

